# pytorch-fpga

./: .gitignore  CMakeLists.txt  docs.md  setup.py
aten/: CMakeLists.txt
aten/src/ATen/: CMakeLists.txt  Context.cpp  Context.h  OpenCLGenerator.h  gen.py  preprocess_declarations.py
c10/: CMakeLists.txt
c10/core/: Backend.h  Device.cpp  Device.h  DeviceType.h  ScalarType.h  TensorImpl.h  TensorOptions.h  TensorTypeId.h
c10/macros/: Macros.h
c10/opencl/: CMakeLists.txt  OpenCLCachingAllocator.cpp  OpenCLCachingAllocator.h  OpenCLException.cpp  OpenCLException.h  OpenCLFunctions.cpp  OpenCLFunctions.h  OpenCLGuard.h  OpenCLMacros.h  OpenCLStream.cpp  OpenCLStream.h
c10/opencl/impl/: OpenCLGuardImpl.cpp  OpenCLGuardImpl.h  opencl_cmake_macros.h.in
c10/util/: function_traits
caffe2/: CMakeLists.txt
caffe2/contrib/opencl/: CMakeLists.txt
caffe2/opencl/: CMakeLists.txt  context.cc  context.h
caffe2/proto/: caffe2_pb.h
cmake/: BuildVariables.cmake  Codegen.cmake  Dependencies.cmake  Summary.cmake
cmake/Modules/: FindSDAccel.cmake
cmake/toolchains/: AWSFPGA.cmake
test/: test_opencl.py
tools/: build_variables.py
tools/autograd/: gen_python_functions.py  gen_variable_type.py
tools/autograd/templates/: VariableType.h  python_torch_functions.cpp  python_torch_functions_dispatch.h  python_variable_methods.cpp  python_variable_methods_dispatch.h
tools/setup_helpers/: cmake.py  env.py
torch/: CMakeLists.txt  __init__.py  __init__.pyi.in
torch/backends/opencl/: __init__.py
torch/csrc/: Module.cpp
torch/csrc/autograd/: VariableTypeManual.cpp  custom_function.cpp  engine.cpp  python_variable.cpp
torch/csrc/cuda/: utils.cpp
torch/csrc/opencl/: Event.cpp  Event.h  Module.cpp  Module.h  Storage.cpp  THOP.h  (+12 more)
torch/opencl/: TensorFactories.cl  __init__.py  __init__.pyi  _utils.py  comm.py  profiler.py  random.py  streams.py
(+57 files in other folders)
